# fastfft

./: .gitignore  CMakeLists.txt  Complex.h  Convolution.h  ConvolutionSlow.h  Makefile  a.out  aligned_allocator.h  avx_cmplx.cpp  avx_cmplx.h  generator.cpp  main.cpp  result_cpu_only.txt  trash.cpp  with_gpu.txt
cuda/: fft_pass.cu
fft/: FFT.h  FFTPrecomp.h  RootsOfUnity.h  gpu_tools.h
string-matching/: demo.cpp
tests/: big-small.ffttest  long-square.ffttest  random1.ffttest  random10.ffttest  random100.ffttest  random11.ffttest  random12.ffttest  random13.ffttest  random14.ffttest  random15.ffttest  random16.ffttest  random17.ffttest  random18.ffttest  random19.ffttest  random2.ffttest  random20.ffttest  random21.ffttest  random22.ffttest  random23.ffttest  random24.ffttest  random25.ffttest  random26.ffttest  random27.ffttest  random28.ffttest  random29.ffttest  random3.ffttest  random30.ffttest  random31.ffttest  random32.ffttest  random33.ffttest  random34.ffttest  random35.ffttest  random36.ffttest  random37.ffttest  random38.ffttest  random39.ffttest  random4.ffttest  random40.ffttest  random41.ffttest  random42.ffttest  (+63 more)
